feat: Room 생성 API 구현
** filter의 권한 부여 할 때 hasRole은 ROLE_ADMIN 과 같이 ROLE_이라는 프리픽스가 붙는다. -> 그에 따라 필터 수정
** Enum 타입을 json에서 받아올떄 컨버팅하는 메서드가 따로 필요하다.